Main page + categories

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>MIAU</title>
-        h1 {color: rgb(79, 185, 227)}
+        <style type="text/css">
+            h1 {color: rgb(118, 32, 239); align-content: center;}
+            h2 {color: rgb(32, 239, 149);}
+        </style>
     </head>
     <body>
         <h1>MIAU</h1>
@@ -13,6 +16,8 @@
             <p>Introduce tu nombre aquí:</p>
             <form>
                 <input type="text" maxlength="20" size="20" name="nombre">
+                <br><br>
+                <input type="submit" value="Let's go!">
             </form>
         </fieldset>
     </body>
