--- a/categories.html
+++ b/categories.html
@@ -10,8 +10,12 @@
     </head>
     <body>
         <h1>Categories</h1>
-        <a href="">
-            <button>Present simple</button>
-        </a>
+        <a href="">Present simple</a>
+        <br><br>
+        <a href="">Present continuous</a>
+        <br><br>
+        <a href="">Present perfect</a>
+        <br><br>
+        <a href="">Present perfect continuous</a>
     </body>
 </html>
