--- a/ClientApp/index.html
+++ b/ClientApp/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>MIAU</title>
+        <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
         <style type="text/css">
             h1 {color: rgb(118, 32, 239); align-content: center;}
             h2 {color: rgb(32, 239, 149);}
