--- a/ClientApp/index.html
+++ b/ClientApp/index.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8">
         <title>MIAU</title>
         <style type="text/css">
-            h1 {color: rgb(118, 32, 239); align-content: center;}
-            h2 {color: rgb(32, 239, 149);}
+            @import url("styles/commonStyles.css");
         </style>
     </head>
     <body>
