Initial refactor, included to-dos

--- a/ClientApp/categories.html
+++ b/ClientApp/categories.html
@@ -17,5 +17,6 @@
         <a href="">Present perfect</a>
         <br><br>
         <a href="">Present perfect continuous</a>
+        <!-- To refactor by Carlos -->
     </body>
 </html>
