--- a/ClientApp/index.html
+++ b/ClientApp/index.html
@@ -19,5 +19,7 @@
                 <input type="submit" value="Let's go!">
             </form>
         </fieldset>
+
+        <!-- To refactor by Nuria -->
     </body>
 </html>
