--- a/ClientApp/index.html
+++ b/ClientApp/index.html
@@ -4,21 +4,21 @@
         <meta charset="UTF-8">
         <title>MIAU</title>
         <style type="text/css">
-            h1 {color: rgb(118, 32, 239); align-content: center;}
-            h2 {color: rgb(32, 239, 149);}
+            @import url("styles/commonStyles.css");
+            @import url("styles/indexStyle.css");
         </style>
     </head>
     <body>
-        <h1>MIAU</h1>
-        <h2>¡Aprende inglés jugando!</h2>
+        <img src="../../MIAU/LogoMorado.png" alt="MIAU logo" width="240"/>
 
-        <fieldset style="width:170px">
-            <p>Introduce tu nombre aquí:</p>
-            <form>
-                <input type="text" maxlength="20" size="20" name="nombre">
-                <br><br>
-                <input type="submit" value="Let's go!">
-            </form>
+        <fieldset id="titulico">
+            <h3>¡Practica tu inglés mientras juegas!</h3>
         </fieldset>
+        
+        <fieldset id="linkecito" style="width:170px">
+            <a role="button" class="self-align:center" href="login.html"> <button>¡Start!</button></a>
+        </fieldset>
+
+        <!--<script src="js/index.js"></script>-->
     </body>
 </html>
