First version of color game
__Done__:
- Recognition of correct answer.
- Draggable letters.
- Answer div contains the correct number of spaces.
- Letters can be removed from answer.

To-do:
- Different colours (randomly)
- Generate random useless letters
- Replayability

--- a/ClientApp/practiceactivity.html
+++ b/ClientApp/practiceactivity.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="game-container">
-            <h1>¿Cu&aacutel es este color?</h1>
+            <h1>¿Cu&aacute;l es este color?</h1>
             <div id="color-display">
 
             </div>
@@ -18,7 +18,7 @@
             </div>
 
             <div id="letters"></div>
-            <button id="verify" disabled>Verificar</button>
+            <button id="verify" disabled="true">Verificar</button>
         </div>
         
         <!-- To do by Dani -->
