--- a/ClientApp/studyactivity.html
+++ b/ClientApp/studyactivity.html
@@ -6,6 +6,11 @@
         <style type="text/css">
             @import url("styles/commonStyles.css");
 
+            h1, h2{
+                color: rgb(51, 165, 171);
+                text-align: center;
+            }
+
             #Umberto{
                 margin: 50px;
                 height: 200px;
