--- a/ClientApp/studycolours.html
+++ b/ClientApp/studycolours.html
@@ -8,6 +8,7 @@
 
             h1{
                 color: rgb(51, 165, 171);
+                text-align: center;
             }
 
             #Paleta{
@@ -30,9 +31,7 @@
             </div>
         </nav>
 
-        <div class="col-md">
-            <h1>APRENDE LOS COLORES EN INGLÉS</h1>
-        </div>
+        <h1>APRENDE LOS COLORES EN INGLÉS</h1>
         
         <img id="Paleta" src = "resources/PaletaEstudio.png">
 
