--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -41,10 +41,10 @@
 	</style>
 </head>
 <body>
-    <a href="practiceactivity.html">
+    <a href="practicemode.html">
         <button>Modo práctica</button>
     </a>
-    <a href="studyactivity.html">
+    <a href="studymode.html">
         <button>Modo estudio</button>
     </a>
 	<button>Tienda</button>
