Changed reference to main menu

--- a/ClientApp/studymode.html
+++ b/ClientApp/studymode.html
@@ -25,7 +25,7 @@
     <body style="background-color: rgb(243, 229, 167);">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="col-1">
-                <button class="btn btn-primary" onclick="window.location.href = 'menu.html';"
+                <button class="btn btn-primary" onclick="window.location.href = 'mainmenu.html';"
                 style="background: transparent;">
                     <img src="resources/arrow.png" alt="ReturnArrow">
                 </button>
