--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -5,11 +5,51 @@
         <title>MIAU</title>
         <style type="text/css">
             @import url("styles/commonStyles.css");
+            @import url("styles/practicemodeStyles.css");
         </style>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
-    <body>
-        <h1>Hi, _____!</h1>
-
-        <!-- To do by Lora -->
+    <body style="overflow: hidden;">
+        <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
+            <div class="container-fluid">
+                <a href="mainmenu.html">
+                    <button style="background: transparent; outline: none; border: 0; width: 60px;"type="button"><img src="./resources/arrow.png" style="width: 100%;"></button>
+                </a>
+            </div>
+        </nav>
+        <h1>Hi ______________!</h1>      
+        <div style="position: relative; left: 0; top: 0;">
+            <div class="bg-image d-flex align-items-center justify-content-center" >
+                <img src="./resources/solo-gatito.png" class="gato" style="position: absolute; top: -6%;
+                right: 0; margin: 20px; z-index: 1; transform: scaleY(-1);" alt="logo">
+            </div> 
+            <div class="bg-image container-fluid" 
+                style="background-image: url('./resources/Background.png'); height: 100vh;" style="position: relative; z-index: 0;">
+                <div class="container-fluid" style="width: 81%; position: absolute; top: 100px; left: 19%; display: flex; justify-content:center;">
+                <div class="card" style="background-color: #C3F1FF; width: 43%;">
+                    <a href="practiceactivity.html" class="fill-div">
+                        <h1>Modo Practico</h1>
+                        <img src="./resources/Mapa aventura.png" alt="img" style="width: 50%; margin: 3%;">
+                    </a>  
+                    
+                </div>
+                <div class="container-fluid" style="display: flex; flex-direction: column;" >
+                <div class="card p-3" style="background-color: #C3F1FF; height: 77%; width: 43%;">
+                    <a href="practicemode.html" class="fill-div">
+                        <h1>Modo Estudio</h1>
+                    <img src="./resources/estudio.png" alt="img" style="max-width: 100%;">
+                    </a> 
+                </div>
+                <div class="card p-3" style="background-color: #C3F1FF; height: 67%; width: 43%; margin-top: 1.5%;">
+                    <a href="practiceactivity.html"> 
+                    </a>  
+                    <h1>Tienda</h1>
+                </div>
+            </div>
+        </div>
+            </div>
+        </div>
+           
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
