--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -28,7 +28,7 @@
                 style="background-image: url('./resources/Background.png'); height: 100vh;" style="position: relative; z-index: 0;">
                 <div class="container-fluid" style="width: 81%; position: absolute; top: 100px; left: 19%; display: flex; justify-content:center;">
                 <div class="card" style="background-color: #C3F1FF; width: 43%;">
-                    <a href="practiceactivity.html" class="fill-div">
+                    <a href="practicemode.html" class="fill-div">
                         <h1>Modo Practico</h1>
                         <img src="./resources/Mapa aventura.png" alt="img" style="width: 50%; margin: 3%;">
                     </a>  
@@ -36,13 +36,13 @@
                 </div>
                 <div class="container-fluid" style="display: flex; flex-direction: column;" >
                 <div class="card p-3" style="background-color: #C3F1FF; height: 77%; width: 43%;">
-                    <a href="practicemode.html" class="fill-div">
+                    <a href="studymode.html" class="fill-div">
                         <h1>Modo Estudio</h1>
                     <img src="./resources/estudio.png" alt="img" style="max-width: 100%;">
                     </a> 
                 </div>
                 <div class="card p-3" style="background-color: #C3F1FF; height: 67%; width: 43%; margin-top: 1.5%;">
-                    <a href="practiceactivity.html"> 
+                    <a href="studymode.html"> 
                     </a>  
                     <h1>Tienda</h1>
                 </div>
