--- a/ClientApp/practicemode.html
+++ b/ClientApp/practicemode.html
@@ -56,6 +56,7 @@
                 <img src="./resources/solo-gatito.png" class="gato" style="position: absolute; bottom: -120px;
                 right: 0; margin: 20px; z-index: 1;" alt="logo">
             </div>
+            <img src="./resources/pepoEspia.png" style="position: absolute; right: 80px; bottom: -10px; width: 30px;">
             <div class="bg-image" 
                 style="background-image: url('./resources/Background.png'); height: 100vh;" style="position: relative; z-index: 0;">
             </div>
