--- a/ClientApp/practicemode.html
+++ b/ClientApp/practicemode.html
@@ -17,7 +17,15 @@
                 </a>
             </div>
         </nav>
-        <h1 style="position: absolute; top: 100px; left: 50px; border:3px solid #ff8dd7; color: rgb(255, 255, 255); background-color: rgb(255, 173, 214); padding:15px; border-radius:10px; z-index: 1;">Modo práctica</h1>
+        <h1 style="position: absolute;
+        top: 100px;
+        left: 50px;
+        border:3px solid #ff8dd7;
+        color: rgb(255, 255, 255); 
+        background-color: rgb(255, 173, 214); 
+        padding:15px; 
+        border-radius:10px; 
+        z-index: 1;">Modo práctica</h1>
         <a href="practiceactivity.html">
             <button class="myButton " style="background: transparent; outline: none; border: 0; position: absolute; top: 250px; left: 50px; z-index: 1; width: 200px; height: 200px;">
                 <img src="./resources/botonColores.png" class="imgButton" style="background-color: transparent; width: 110%; filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.4));">
