--- a/ClientApp/studymode.html
+++ b/ClientApp/studymode.html
@@ -6,17 +6,8 @@
         <meta charset="utf-8">
         <style>
             @import url("styles/commonStyles.css");
-            #button-cont button{
-                background-color: #85d8e8;
-                height: 130px;
-                width: 550px;
-
-                font-size: 40px;
-                font-weight: 400;
-                line-height: 50px;
-                letter-spacing: 0em;
-                text-align: center;
-            }
+            @import url("styles/studyStyle.css");
+            
         </style>
         <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
