--- a/ClientApp/practicemode.html
+++ b/ClientApp/practicemode.html
@@ -31,10 +31,12 @@
                 <img src="./resources/botonColores.png" class="imgButton" style="background-color: transparent; width: 110%; filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.4));">
                 <h2 class="hover-text" style="position: absolute; color: black; font-size: medium; top: 70px; left: 59px; z-index: 3; background-color: rgba(255, 173, 214, 0.7); padding:15px; border-radius:10px;">The colors</br>Los colores</h2>
             </button> 
-        </a>        
+        </a>
+        <a href="practiceactivity2.html">      
         <button class="myButton " style="background: transparent; outline: none; border: 0; position: absolute; bottom: 125px; left: 380px; z-index: 1; width: 190px; height: 190px;">
             <img  src="./resources/botonAnimales.png" class="imgButton" style="background-color: transparent; width: 110%; filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.4));">
-        </button>   
+        </button>
+        </a>  
         <button class="myButton " style="background: transparent; outline: none; border: 0; position: absolute; top: 250px; left: 710px; z-index: 1; width: 200px; height: 200px;">
             <img src="./resources/botonNumeros.png" class="imgButton" style="background-color: transparent; width: 110%; filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.4));">
         </button>  
