added number game

--- a/ClientApp/practicemode.html
+++ b/ClientApp/practicemode.html
@@ -36,10 +36,12 @@
         <button class="myButton " style="background: transparent; outline: none; border: 0; position: absolute; bottom: 125px; left: 380px; z-index: 1; width: 190px; height: 190px;">
             <img  src="./resources/botonAnimales.png" class="imgButton" style="background-color: transparent; width: 110%; filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.4));">
         </button>
-        </a>  
+        </a>
+        <a href="practiceactivity3.html"> 
         <button class="myButton " style="background: transparent; outline: none; border: 0; position: absolute; top: 250px; left: 710px; z-index: 1; width: 200px; height: 200px;">
             <img src="./resources/botonNumeros.png" class="imgButton" style="background-color: transparent; width: 110%; filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.4));">
-        </button>  
+        </button>
+        </a> 
         <button class="myButton " style="background: transparent; outline: none; border: 0; position: absolute; bottom: 125px; right: 300px; z-index: 1; width: 200px; height: 200px;">
             <img src="./resources/botonSoonMore.png" class="imgButton" style="background-color: transparent; width: 110%; filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.4));">
         </button>
