Small changes to practice activities htmls
Removal of unused containers & improved accesibility (slightly)

Co-Authored-By: LoraShk1 <75644987+LoraShk1@users.noreply.github.com>

--- a/ClientApp/practiceactivity2.html
+++ b/ClientApp/practiceactivity2.html
@@ -10,8 +10,7 @@
     <body>
         <div id="game-container">
             <h1>¿C&oacute;mo se llama este animal?</h1>
-            <img src="resources/Umberto.png" width="205" height="auto" id="myPicture" alt="some image">
-            <div id="color-display"></div>
+            <img src="resources/Umberto.png" width="205" height="auto" id="myPicture" alt="An animal">
             <div id="answer">
                 
             </div>
