--- a/ClientApp/practiceactivity3.html
+++ b/ClientApp/practiceactivity3.html
@@ -10,8 +10,7 @@
     <body>
         <div id="game-container">
             <h1>¿C&oacute;mo se llama este n&uacute;mero?</h1>
-            <img src="resources/Umberto.png" width="205" height="auto" id="myPicture" alt="some image">
-            <div id="number-display"></div>
+            <img src="resources/Umberto.png" width="205" height="auto" id="myPicture" alt="A number">
             <div id="answer">
                 
             </div>
