--- a/ClientApp/studyanimals.html
+++ b/ClientApp/studyanimals.html
@@ -23,31 +23,24 @@
     </nav>
 
     <h1>¡Aprende los colores en inglés!</h1>
-    <h4>Pasa el cursor por los colores para verlos.</h4>
     <div id="PaletaDiv" class="mx-auto d-block">
-        <div class="green">
+        <div id="green">
             <h3 class="hover-text">Verde<br />Green<br /></h3>
         </div>
-        <div class="red">
+        <div id="red">
             <h3 class="hover-text">Rojo<br />Red<br /></h3>
         </div>
-        <div class="blue">
+        <div id="blue">
             <h3 class="hover-text">Azul<br />Blue<br /></h3>
         </div>
-        <div class="yellow">
+        <div id="yellow">
             <h3 class="hover-text">Amarillo<br />Yellow<br /></h3>
         </div>
-        <div class="white">
+        <div id="white">
             <h3 class="hover-text">Blanco<br />White<br /></h3>
         </div>
     </div>
 
-    <button id="changeColorsButton" class="mx-auto d-block">
-        <label>¡M&aacute;s colores!</label>
-    </button>
-
-
-    <script src="js/colorStudy.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
