--- a/ClientApp/studyanimals.html
+++ b/ClientApp/studyanimals.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>MIAU</title>
     <style type="text/css">
-        @import url("./styles/studyColors.css");
+        @import url("./styles/studyAnimals.css");
     </style>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,22 +22,29 @@
         </div>
     </nav>
 
-    <h1>¡Aprende los colores en inglés!</h1>
-    <div id="PaletaDiv" class="mx-auto d-block">
-        <div id="green">
-            <h3 class="hover-text">Verde<br />Green<br /></h3>
-        </div>
-        <div id="red">
-            <h3 class="hover-text">Rojo<br />Red<br /></h3>
-        </div>
-        <div id="blue">
-            <h3 class="hover-text">Azul<br />Blue<br /></h3>
-        </div>
-        <div id="yellow">
-            <h3 class="hover-text">Amarillo<br />Yellow<br /></h3>
-        </div>
-        <div id="white">
-            <h3 class="hover-text">Blanco<br />White<br /></h3>
+    <h1>¡Aprende los animales en inglés!</h1>
+    <div id="Animals" class="mx-auto d-block container-fluid">
+        <div class="row">
+            <div id="dog" class="card">
+                <img src="./resources/animals/dog.png" />
+                <h3 class="hover-text">Perro<br />Dog<br /></h3>
+            </div>
+            <div id="shark" class="card">
+                <img src="./resources/animals/shark.png" />
+                <h3 class="hover-text card-text">Tiburón<br />Shark<br /></h3>
+            </div>
+            <div id="lion" class="card">
+                <img src="./resources/animals/lion.png" />
+                <h3 class="hover-text card-text">León<br />Lion<br /></h3>
+            </div>
+            <div id="sheep" class="card">
+                <img src="./resources/animals/sheep.png" />
+                <h3 class="hover-text card-text">Oveja<br />Sheep<br /></h3>
+            </div>
+            <div id="elephant" class="card">
+                <img src="./resources/animals/elephant.png" />
+                <h3 class="hover-text card-text">Elefante<br />Elephant<br /></h3>
+            </div>
         </div>
     </div>
 
