--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>MIAU</title>
     <style type="text/css">
-        @import url("styles/commonStyles.css");
         @import url("styles/practicemodeStyles.css");
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,10 +13,11 @@
 
 <body style="overflow: hidden;">
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
-        <div class="container-fluid">
-            <a href="mainmenu.html">
-                <button type="button"><img src="./resources/arrow.png" style="width: 100%;"></button>
-            </a>
+        <div class="col-1">
+            <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
+                onclick="window.location.href = 'index.html';">
+                <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" />
+            </button>
         </div>
     </nav>
     <h1>Hi ______________!</h1>
