--- a/ClientApp/practiceactivity3.html
+++ b/ClientApp/practiceactivity3.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <title>MIAU</title>
-        <style type="text/css">
-            @import url("styles/numberGame.css");
-        </style>
-    </head>
-    <body>
-        <div id="game-container">
-            <h1>¿C&oacute;mo se llama este n&uacute;mero?</h1>
-            <img src="resources/Umberto.png" width="205" height="auto" id="myPicture" alt="A number">
-            <div id="answer">
-                
-            </div>
 
-            <div id="letters"></div>
-            <button id="verify" disabled="true">Verificar</button>
+<head>
+    <meta charset="UTF-8">
+    <title>MIAU</title>
+    <style type="text/css">
+        @import url("styles/numberGame.css");
+    </style>
+</head>
+
+<body>
+    <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
+        <div class="col-1">
+            <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
+                onclick="window.location.href = 'practicemode.html';">
+                <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" />
+            </button>
         </div>
-    </body>
-	<script src="js/numberGame.js"></script>
-					
+    </nav>
+    <div id="game-container">
+        <h1>¿C&oacute;mo se llama este n&uacute;mero?</h1>
+        <img src="resources/Umberto.png" width="205" height="auto" id="myPicture" alt="A number">
+        <div id="answer">
+
+        </div>
+
+        <div id="letters"></div>
+        <button id="verify" disabled="true">Verificar</button>
+    </div>
+</body>
+<script src="js/numberGame.js"></script>
+
 </html>
