--- a/ClientApp/studyactivity.html
+++ b/ClientApp/studyactivity.html
@@ -1,44 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>MIAU</title>
-        <style type="text/css">
-            @import url("styles/commonStyles.css");
 
-            h1, h2{
-                color: rgb(51, 165, 171);
-                text-align: center;
-            }
+<head>
+    <meta charset="UTF-8">
+    <title>MIAU</title>
+    <style type="text/css">
+        @import url("styles/commonStyles.css");
 
-            #Umberto{
-                margin: 50px;
-                height: 200px;
-            }
+        h1,
+        h2 {
+            color: rgb(51, 165, 171);
+            text-align: center;
+        }
 
-        </style>
-        <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    </head>
-    <body style="background-color: rgb(243, 229, 167);">
-        <!-- To do by Carlos -->
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="col-1">
-                <button class="btn btn-primary" onclick="window.location.href = 'studymode.html';"
+        #Umberto {
+            margin: 50px;
+            height: 200px;
+        }
+    </style>
+    <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+</head>
+
+<body style="background-color: rgb(243, 229, 167);">
+    <!-- To do by Carlos -->
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="col-1">
+            <button class="btn btn-primary" onclick="window.location.href = 'studymode.html';"
                 style="background: transparent;">
-                    <img src="resources/arrow.png" alt="ReturnArrow">
-                </button>
-            </div>
-        </nav>
-
-        <h1>UMBERTO ESTÁ TRABAJANDO PARA TENER PRONTO ESTA ACTIVIDAD</h1>
-        <h2>MIAU!</h2>
-
-        <div >
-
+                <img src="resources/arrow.png" alt="ReturnArrow">
+            </button>
         </div>
-        <img id="Umberto" src = "resources/Umberto.png">
+    </nav>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    </body>
+    <h1>UMBERTO EST&Aacute; TRABAJANDO PARA TENER PRONTO ESTA ACTIVIDAD</h1>
+    <h2>MIAU!</h2>
+
+    <div>
+
+    </div>
+    <img id="Umberto" src="resources/Umberto.png">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
