--- a/ClientApp/studyanimals.html
+++ b/ClientApp/studyanimals.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>MIAU</title>
     <style type="text/css">
-        @import url("./styles/studyAnimals.css");
+        @import url("./styles/studyActivities/studyAnimals.css");
     </style>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,7 +22,8 @@
         </div>
     </nav>
 
-    <h1>¡Aprende los animales en inglés!</h1>
+    <h1>¡Aprende los animales en ingl&eacute;s!</h1>
+    <h4>Pasa el cursor por los animales para ver sus nombres.</h4>
     <div id="Animals" class="mx-auto d-block container-fluid">
         <div class="row">
             <div id="dog" class="card">
