--- a/ClientApp/studycolors.html
+++ b/ClientApp/studycolors.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>MIAU</title>
     <style type="text/css">
-        @import url("./styles/studyColors.css");
+        @import url("./styles/studyActivities/studyColors.css");
     </style>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
