--- a/ClientApp/studymode.html
+++ b/ClientApp/studymode.html
@@ -5,19 +5,7 @@
     <title>MIAU</title>
     <meta charset="utf-8">
     <style>
-        @import url("styles/commonStyles.css");
-
-        #button-cont button {
-            background-color: #85d8e8;
-            height: 130px;
-            width: 550px;
-
-            font-size: 40px;
-            font-weight: 400;
-            line-height: 50px;
-            letter-spacing: 0em;
-            text-align: center;
-        }
+        @import url("styles/studyMode.css");
     </style>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,10 +14,11 @@
 
 <body style="background-color: rgb(243, 229, 167);">
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
-        <div class="container-fluid">
-            <a href="mainmenu.html">
-                <button type="button"><img src="./resources/arrow.png" style="width: 100%;"></button>
-            </a>
+        <div class="col-1">
+            <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
+                onclick="window.location.href = 'mainmenu.html';">
+                <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" />
+            </button>
         </div>
     </nav>
 
@@ -38,9 +27,9 @@
 
         <div id="button-cont" class="float-left">
             <div>
-                <button class="btn btn-primary btn-lg" onclick="window.location.href = 'studycolours.html';">
+                <button class="btn btn-primary btn-lg" onclick="window.location.href = 'studycolors.html';">
                     <img src="resources/botonColores.png" alt="Colores" class="mr-3" width="100">
-                    COLORES - COLOURS
+                    Colores - Colors
                 </button>
             </div>
 
@@ -49,15 +38,16 @@
             <div>
                 <button class="btn btn-primary btn-lg" onclick="window.location.href = 'studyanimals.html';">
                     <img src="resources/botonAnimales.png" alt="Animales" class="mr-3" width="100">
-                    ANIMALES - ANIMALS
+                    Animales - Animals
                 </button>
             </div>
 
             <br>
 
             <div>
-                <button class="btn btn-primary btn-lg" onclick="window.location.href = 'studyactivity.html';">
-                    CATEGORÍA EN PROCESO - WORK IN PROGRESS
+                <button class="btn btn-primary btn-lg" onclick="window.location.href = 'studynumbers.html';">
+                    <img src="resources/botonNumeros.png" alt="Numeros" class="mr-3" width="100">
+                    N&uacute;meros - Numbers
                 </button>
             </div>
 
