--- a/ClientApp/login.html
+++ b/ClientApp/login.html
@@ -15,12 +15,11 @@
     </fieldset>
     <fieldset id="formnombre">
         <p>Mi nombre es: </p>
-        <form method="get" action="mainmenu.html">
-            <input type="text" maxlength="20" size="20" name="nombre">
-            <input id="botoncico" type="submit" value="Let's go!">
-        </form>
+        <input type="text" maxlength="20" size="20" name="nombre" id="nombre" />
+        <button id="botoncico"> ¡Vamos! </button>
     </fieldset>
     <img src="../../MIAU/Umberto.png" alt="Umberto" height="200px" width="120px">
+    <script src="./js/login.js"></script>
 </body>
 
 </html>
