--- a/ClientApp/login.html
+++ b/ClientApp/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>MIAU</title>
     <style type="text/css">
-        @import url("styles/loginStyle.css");
+        @import url("/MIAU/ClientApp/styles/loginStyle.css");
     </style>
 </head>
 
@@ -20,7 +20,12 @@
             <input id="botoncico" type="submit" value="Let's go!">
         </form>
     </fieldset>
-    <img src="../../MIAU/Umberto.png" alt="Umberto" height="200px" width="120px">
+    <div class="bubble der">
+        <img src="./resources/bubbles/bubbleholaumberto.png" id="burbuja">
+    </div>
+    <img src="../../MIAU/Umberto.png" class="Umberto" alt="Umberto" height="200px" width="120px">
+    
+
 </body>
 
 </html>
