--- a/ClientApp/studymode.html
+++ b/ClientApp/studymode.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <style>
         @import url("styles/studyMode.css");
+        @import url("styles/commonStyles.css");
     </style>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,7 +27,7 @@
         <br>
 
         <div id="button-cont" class="float-left">
-            <div>
+            <div class="botonCol">
                 <button class="btn btn-primary btn-lg" onclick="window.location.href = 'studycolors.html';">
                     <img src="resources/botonColores.png" alt="Colores" class="mr-3" width="100">
                     Colores - Colors
@@ -35,7 +36,7 @@
 
             <br>
 
-            <div>
+            <div class="botonAni">
                 <button class="btn btn-primary btn-lg" onclick="window.location.href = 'studyanimals.html';">
                     <img src="resources/botonAnimales.png" alt="Animales" class="mr-3" width="100">
                     Animales - Animals
@@ -44,7 +45,7 @@
 
             <br>
 
-            <div>
+            <div class="botonNum">
                 <button class="btn btn-primary btn-lg" onclick="window.location.href = 'studynumbers.html';">
                     <img src="resources/botonNumeros.png" alt="Numeros" class="mr-3" width="100">
                     N&uacute;meros - Numbers
@@ -59,10 +60,23 @@
 
     </div>
 
+    <div class="gatito">
+        <img src="./resources/solo-gatito.png" id="gatete">
+    </div>
+
+    <div class="bubble der">
+        <img src="./resources/bubbles/bubbleStudyColores.png" id="bubbleColoresStudy" style="display:none">
+        <img src="./resources/bubbles/bubbleStudyAnimales.png" id="bubbleAnimalesStudy" style="display:none">
+        <img src="./resources/bubbles/bubbleStudyNumeros.png" id="bubbleNumerosStudy" style="display:none">
+        <img src="./resources/bubbles/bubbleBienvenidaStudyMode.png" id="bubbleWelcomeStudy" style="display:block">
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+
+    <script src="/MIAU/ClientApp/js/gatojump.js"></script>
 </body>
 
 </html>
