reorganización de recursos

--- a/ClientApp/index.html
+++ b/ClientApp/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <img src="../../MIAU/LogoMorado.png" alt="MIAU logo" width="240" />
+    <img src="resources/LogoMorado.png" alt="MIAU logo" width="240" />
 
     <fieldset id="titulico">
         <h3>¡Practica tu ingl&eacute;s mientras juegas!</h3>
