--- a/ClientApp/practiceactivity3.html
+++ b/ClientApp/practiceactivity3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>MIAU</title>
     <style type="text/css">
-        @import url("styles/practiceGames/numberGame.css");
+        @import url("./styles/generalGameStyles.css");
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -29,7 +29,7 @@
     </nav>
     <div id="game-container">
         <h1>¿C&oacute;mo se llama este n&uacute;mero?</h1>
-        <img src="resources/Umberto.png" width="205" height="auto" id="myPicture" alt="A number">
+        <img src="resources/Umberto.png" width="205" height="auto" id="number-display" alt="A number">
         <div id="answer">
 
         </div>
