Moved index.html to proyect root

--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
         <div class="col-1">
             <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
-                onclick="window.location.href = 'index.html';">
+                onclick="window.location.href = '../index.html';">
                 <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" />
             </button>
         </div>
@@ -32,7 +32,7 @@
             <img src="./resources/bubbles/bubbleMenuModoPractica.png" id="bubblePractica" style="display:none">
             <img src="./resources/bubbles/bubbleMenuModoEstudio.png" id="bubbleEstudio" style="display:none">
             <img src="./resources/bubbles/bubbleMenuTienda.png" id="bubbleTienda" style="display:none">
-          </div>
+        </div>
         <div class="bg-image container-fluid"
             style="background-image: url('./resources/Background.png'); height: 100vh;"
             style="position: relative; z-index: 0;">
@@ -54,7 +54,8 @@
                                 style="margin-bottom: 29%; margin-top: 1%; width: 100%;">
                         </a>
                     </div>
-                    <div class="card p-3 botonTienda" style="background-color: #C3F1FF; height: 67%; width: 43%; margin-top: 1.5%;">
+                    <div class="card p-3 botonTienda"
+                        style="background-color: #C3F1FF; height: 67%; width: 43%; margin-top: 1.5%;">
                         <a href="studymode.html">
                         </a>
                         <h1 style="top: 21%; left: 33%;">Personaliza a Umberto</h1>
