--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <title>MIAU</title>
     <style type="text/css">
-        @import url("styles/commonStyles.css");
-        @import url("styles/indexStyle.css");
+        @import url("./ClientApp/styles/indexStyle.css");
     </style>
 </head>
 
@@ -18,10 +17,8 @@
     </fieldset>
 
     <fieldset id="linkecito" style="width:170px">
-        <a role="button" class="self-align:center" href="login.html"> <button>¡Vamos!</button></a>
+        <button class="self-align:center" onclick="window.location.href = './ClientApp/login.html';">¡Vamos!</button>
     </fieldset>
-
-    <!--<script src="js/index.js"></script>-->
 </body>
 
 </html>
