Reverted moving index.html

--- a/ClientApp/index.html
+++ b/ClientApp/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>MIAU</title>
     <style type="text/css">
-        @import url("./ClientApp/styles/indexStyle.css");
+        @import url("./styles/indexStyle.css");
     </style>
 </head>
 
@@ -17,7 +17,7 @@
     </fieldset>
 
     <fieldset id="linkecito" style="width:170px">
-        <button class="self-align:center" onclick="window.location.href = './ClientApp/login.html';">¡Vamos!</button>
+        <button class="self-align:center" onclick="window.location.href = './login.html';">¡Vamos!</button>
     </fieldset>
 </body>
 
