--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>MIAU</title>
     <style type="text/css">
-        @import url("styles/practicemodeStyles.css");
         @import url("styles/commonStyles.css");
+        @import url("styles/practicemodeStyles.css");
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
         <div class="col-1">
             <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
-                onclick="window.location.href = '../index.html';">
+                onclick="window.location.href = './index.html';">
                 <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" />
             </button>
         </div>
