--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>MIAU</title>
     <style type="text/css">
+        @import url("styles/mainMenu.css");
         @import url("styles/practicemodeStyles.css");
         @import url("styles/commonStyles.css");
     </style>
@@ -15,13 +16,13 @@
 <body style="overflow: hidden;">
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
         <div class="col-1">
-            <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
+            <button style="background: transparent !important; outline: none; border: 0; width: 60px;" class="btn btn-primary"
                 onclick="window.location.href = 'index.html';">
                 <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" />
             </button>
         </div>
     </nav>
-    <h1 id="nombre"></h1>
+    <h1 id="nombre" style="position:fixed !important; left: 132px !important;"></h1>
     <div style="position: relative; left: 0; top: 0;">
         <div class="bg-image d-flex align-items-center justify-content-center">
             <img src="./resources/solo-gatito.png" class="gato" style="position: absolute; top: -6%;
@@ -37,28 +38,22 @@
             style="background-image: url('./resources/Background.png'); height: 100vh;"
             style="position: relative; z-index: 0;">
             <div class="container-fluid"
-                style="width: 81%; position: absolute; top: 100px; left: 19%; display: flex; justify-content:center;">
+                style="width: 81%; position: absolute; top: 12%; left: 19%; display: flex; justify-content:center;">
                 <div class="card botonPractica" style="background-color: #C3F1FF; width: 43%;">
-                    <a href="practicemode.html" class="fill-div" style="display: flex; justify-content: center;">
-                        <h1 style="top: 80%; left: 18%;">¡Practica las palabras que has aprendido!</h1>
-                        <img src="./resources/Mapa aventura.png" alt="img"
-                            style="margin-bottom: 29%; margin-left: 3%; margin-right: 3%; height: 63%; margin-top: 4%;">
-                    </a>
+                    <img src="./resources/Mapa aventura.png" alt="img"
+                    style="margin-bottom: 22%; margin-left: 3%; margin-right: 3%; height: auto; margin-top: 4%;">
+                    <a href="practicemode.html" class="btn btn-primary" style="margin: 3%;">¡Practica las palabras que has aprendido!</a>
 
                 </div>
+
                 <div class="container-fluid" style="display: flex; flex-direction: column;">
-                    <div class="card p-3 botonEstudio" style="background-color: #C3F1FF; height: 77%; width: 43%;">
-                        <a href="studymode.html" class="fill-div" style="display: flex; justify-content: center;">
-                            <h1 style="top: 77%; left: 19%;">Aprende nuevas palabras en inglés</h1>
-                            <img src="./resources/estudio.png" alt="img"
-                                style="margin-bottom: 29%; margin-top: 1%; width: 100%;">
-                        </a>
+                    <div class="card p-3 botonEstudio" style="background-color: #C3F1FF; height: auto; width: 43%;">
+                        <img src="./resources/estudio.png" alt="img"
+                            style="margin-bottom: 10%; height: auto;">
+                        <a href="studymode.html" class="btn btn-primary">Aprende nuevas palabras en inglés</a>
                     </div>
-                    <div class="card p-3 botonTienda" style="background-color: #C3F1FF; height: 67%; width: 43%; margin-top: 1.5%;">
-                        <a href="studymode.html">
-                        </a>
-                        <h1 style="top: 21%; left: 33%;">Personaliza a Umberto</h1>
-                    </div>
+                    <div class="card p-3 botonTienda" style="background-color: #C3F1FF; height: auto; width: 43%; margin-top: 1.5%;">
+                        <a href="studymode.html" class="btn btn-primary">Personaliza a Umberto</a>
                 </div>
             </div>
         </div>
