--- a/ClientApp/practiceactivity.html
+++ b/ClientApp/practiceactivity.html
@@ -29,6 +29,7 @@
     </nav>
     <div id="game-container">
         <h1>¿Cu&aacute;l es este color?</h1>
+        <h2>Arrastra las letras al espacio que quieras, o hazles click para moverlas al primer espacio libre.</h2>
         <div id="color-display">
 
         </div>
