Added auxiliary and alt text (in Spanish) to games

--- a/ClientApp/practiceactivity2.html
+++ b/ClientApp/practiceactivity2.html
@@ -29,6 +29,7 @@
     </nav>
     <div id="game-container">
         <h1>¿C&oacute;mo se llama este animal?</h1>
+        <h2>Arrastra las letras al espacio que quieras, o hazles click para moverlas al primer espacio libre.</h2>
         <img src="resources/Umberto.png" width="205" height="auto" id="animal-display" alt="An animal">
         <div id="answer">
 
