--- a/ClientApp/practiceactivity3.html
+++ b/ClientApp/practiceactivity3.html
@@ -29,6 +29,7 @@
     </nav>
     <div id="game-container">
         <h1>¿C&oacute;mo se llama este n&uacute;mero?</h1>
+        <h2>Arrastra las letras al espacio que quieras, o hazles click para moverlas al primer espacio libre.</h2>
         <img src="resources/Umberto.png" width="205" height="auto" id="number-display" alt="A number">
         <div id="answer">
 
